--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,8 @@ variables:
   DOCKER_HOST: tcp://docker:2376
   DOCKER_TLS_CERTDIR: "/certs"
   PROJECT_APP_DOCKERFILE: "Dockerfile"
-  CONTAINER_APP_IMAGE: $CI_REGISTRY/$CI_REGISTRY_IMAGE/base:$CI_COMMIT_SHORT_SHA
-  CONTAINER_LEATEST_IMAGE: $CI_REGISTRY/$CI_REGISTRY_IMAGE/base:latest
+  CONTAINER_APP_IMAGE: $CI_REGISTRY_IMAGE/base:$CI_COMMIT_SHORT_SHA
+  CONTAINER_LEATEST_IMAGE: $CI_REGISTRY_IMAGE/base:latest
 
 before_script:
   - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
